--- a/pom.xml
+++ b/pom.xml
@@ -132,7 +132,7 @@
 		<repository>
 			<id>deploymentRepo</id>
 			<name>admin</name>
-			<url>http://172.10.0.55:8081/repository/maven-releases/</url>
+			<url>http://localhost:8081/repository/mavenreleases/</url>
 		</repository>
 	</distributionManagement>
 </project>
