--- a/pom.xml
+++ b/pom.xml
@@ -130,7 +130,7 @@
 	</build>
 	<distributionManagement>
 		<repository>
-			<id>deploymentRepo</id>
+			<id>nexus-releases</id>
 			<name>admin</name>
 			<url>http://localhost:8081/repository/mavenreleases/</url>
 		</repository>
