--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,34 +1,36 @@
-version: "3.3"
-
+version: "3"
 services:
   mysqldb:
-    image: mysql:5.7
-    restart: unless-stopped
+    image: mysql
+    container_name: mysql
     command: mysqld --default-authentication-plugin=mysql_native_password
-    hostname: mysql
-    environment:
-      - MYSQL_ROOT_PASSWORD=
-      - MYSQL_DATABASE=tpachato
     volumes:
       - mysql-data:/var/local/mysql/data
-      - db:/var/lib/mysql
     ports:
-      - 3306:3306
-      
-  app:
+      - "3306:3306"
+    hostname: mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=root
+      - MYSQL_DATABASE=tpachato
+    volumes:
+      - db:/var/lib/mysql
+
+  app_maven:
     depends_on:
       - mysqldb
-    build:
-      context: "./"
-      dockerfile: "Dockerfile"
+    image: dalibouch/devops:latest
+    container_name: dali
     restart: on-failure
     ports:
-      - 8089:8089
+      - "8089:8089"
+    environment:
+      SPRING_APPLICATION_JSON: '{
+        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpachato?useSSL=false",
+        "spring.datasource.username" : "root",
+        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
+        "spring.jpa.hibernate.ddl-auto" : "update" 
+        }'
     volumes:
-      - .m2:/home/.m2
-    stdin_open: true
-    tty: true
-    
+      - .m2:/root/.m2 
 volumes:
   db:
-  mysql-data:
