--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   mysqldb:
-    image: mysql
+    image: mysql:8.0
     container_name: mysql
     command: mysqld --default-authentication-plugin=mysql_native_password
     volumes:
