--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,26 @@
 version: "3"
 services:
   mysqldb:
-    image: mysql:8.0
-    container_name: mysql
-    command: mysqld --default-authentication-plugin=mysql_native_password
-    volumes:
-      - mysql-data:/var/local/mysql/data
+    container_name: mysqldb
+    image: mysql/mysql-server:8.0
+    restart: unless-stopped
     ports:
-      - "3306:3306"
-    hostname: mysql
+     - 3306:3306
     environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - MYSQL_DATABASE=tpachato
+     - MYSQL_ROOT_PASSWORD=root
+     - MYSQL_DATABASE=tpachato
+     - MYSQL_USER=root
+     - MYSQL_PASSWORD=root
     volumes:
-      - db:/var/lib/mysql
+     - /home/vagrant/mysql/data:/var/lib/mysql
 
-  app_maven:
-    depends_on:
-      - mysqldb
+  spring_app:
     image: dalibouch/devops:latest
-    container_name: dali
+    container_name: achatspring
     restart: on-failure
-    ports:
-      - "8089:8089"
     environment:
-      SPRING_APPLICATION_JSON: '{
-        "spring.datasource.url"  : "jdbc:mysql://mysqldb:3306/tpachato?useSSL=false",
-        "spring.datasource.username" : "root",
-        "spring.jpa.properties.hibernate.dialect" : "org.hibernate.dialect.MySQL5InnoDBDialect",
-        "spring.jpa.hibernate.ddl-auto" : "update" 
-        }'
-    volumes:
-      - .m2:/root/.m2 
-volumes:
-  db:
-  mysql-data:
+     - spring.datasource.url=jdbc:mysql://mysqldb:3306/achatdb?createDatabaseIfNotExist=true&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+    ports:
+     - 8089:8089
+    depends_on:
+     - mysqldb
