--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
      - MYSQL_USER=root
      - MYSQL_PASSWORD=root
     volumes:
-     - /home/vagrant/mysql/data:/var/lib/mysql
+      - db:/var/lib/mysql
+      - mysql-data:/var/local/mysql/data
 
   spring_app:
     image: dalibouch/devops:latest
@@ -29,3 +30,6 @@ services:
      - 8089:8089
     depends_on:
      - mysqldb
+
+volumes:
+  db:
