--- a/pom.xml
+++ b/pom.xml
@@ -97,7 +97,7 @@
 					<reuseForks>true</reuseForks>
 
 					<includes>
-						<include>**/*Test.java</include>
+						<include>**/*Tests.java</include>
 					</includes>
 				</configuration>
 			</plugin>
